[package]
name = "redrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocator-api2 = "0.2.16"
libc = "0.2.152"
magnus = { version = "0.6.2", features = ["rb-sys"] }
rb-sys = "0.9.86"


[build-dependencies]
rb-sys-env = { version = "0.1" }

[dev-dependencies]
rb-sys-test-helpers = { version = "0.2" }
